[package]
name = "generic-btree"
author = "Zixuan Chen"
version = "0.1.0"
edition = "2021"
description = "Generic BTree for versatile purposes"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/loro-dev/generic-btree"
repository = "https://github.com/loro-dev/generic-btree"
authors = ["zxch3n <remch183@outlook.com>"]
keywords = ["btree", "data-structure"]
include = ["Cargo.toml", "/src/**/*.rs", "/benches/**/*.rs"]
documentation = "https://docs.rs/generic-btree"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
smallvec = { version = "1.10.0", features = [] }
thunderdome = "0.6.0"


[dev-dependencies]
arbitrary = { version = "1.2.3", features = ["derive"] }
criterion = "0.4.0"
jumprope = "1.0.0"
rand = "0.8.5"
color-backtrace = "0.5.1"
ctor = "0.1.26"


[[bench]]
name = "ord"
harness = false

[[bench]]
name = "rope"
harness = false

[profile.release]
debug = true
