[package]
name = "generic-btree-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.2.3", features = ["derive"] }
libfuzzer-sys = "0.4"

[dependencies.generic-btree]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = true

[[bin]]
name = "ord"
path = "fuzz_targets/ord.rs"
test = false
doc = false

[[bin]]
name = "rope"
path = "fuzz_targets/rope.rs"
test = false
doc = false
